feat: add create product category endpoint
